# harmony

./: .gitignore  README.md  camera.py  capture.py  detect_obb.py  docker-compose.yaml  fiware.py  gesture-commands-fiware.py  index.html  jobs.py  main.py  package-lock.json  package.json  pipeline.py  requirements.txt  voice-commands-fiware.py  xarm_pick_and_place.py
M5StickCPlus2-to-FIWARE/: config.h.tpl
config/: config.json.tpl  detect_obb.json.tpl  xarm_pick_and_place.json.tpl
dashboards/: Performance Monitoring.json
diagrams/: task_pack_bottle.dot
pack-bottle-architecture/: README.md  launch_pack_bottle.sh
pack-bottle-architecture/ai-bottle-detector/: .gitignore  jobs.py  requirements.txt
pack-bottle-architecture/ai-bottle-detector/config/: detect_obb.json.tpl
pack-bottle-architecture/fiware-docker/: LICENSE  README.md  docker-compose.yml
pack-bottle-architecture/gesture-commands-fiware/: README.md  gesture-commands-fiware.py
pack-bottle-architecture/react-dashboard/: vite.config.js
pack-bottle-architecture/ros2-fiware-xarm/: run.sh
pack-bottle-final/: README.md  launch_pack_bottle.sh
pack-bottle-final/ai-bottle-detector-fiware/: README.md  jobs.py  main.py
pack-bottle-final/gesture-commands-fiware/: gesture-commands-fiware.py  run-with-gui.sh  run.sh
pack-bottle-final/react-dashboard/: .gitignore  package.json
pack-bottle-final/react-dashboard/src/: App.css
pack-bottle-final/voice-commands-fiware/: README.md  run.sh
perception/vision/: test_detection_model.ipynb  test_model.ipynb  test_segmentation_model.ipynb
pick-and-place-architecture/: README.md
pick-and-place-architecture/ai-bottle-detector/: .gitignore  NOTICE  THIRD_PARTY_LICENSES.md  requirements.txt  train.py
pick-and-place-architecture/arduino-iot-device-firmware/: README.md
pick-and-place-architecture/fiware-docker/: README.md
pick-and-place-architecture/react-dashboard/: package.json
pick-and-place-architecture/ros2-fiware-xarm/: .gitignore  README.md
provisioning/dashboards/: dashboards.yaml
provisioning/datasources/: datasource.yaml  datasources.yaml
ros2-moveit-pipeline/src/xarm7_moveit_skills/: CMakeLists.txt  package.xml
ros2-moveit-pipeline/src/xarm7_moveit_skills/launch/: pick_place_demo.launch.py
ros2-moveit-pipeline/src/xarm7_moveit_skills/src/: close_gripper.cpp  move_to_pose.cpp  move_to_pose_with_ca.cpp  move_to_pose_with_ca_isaac.cpp  move_to_pose_with_rviz.cpp  open_gripper.cpp  pick copy.cpp  pick.cpp  pick_straight_to_pose.cpp
ros2_ws/config/: fiware_bridge_config.yaml.tpl  xarm_pack_bottle.json.tpl  xarm_pick_and_place.json.tpl
ros2_ws/launch/: complete.launch.py  pick_and_place.launch.py
sample-config/: dashboard-config.json
sample-configs/: dashboard-config.json  dashboard-pack-bottle-config.json  dashboard-pack-bottle-final-config.json  dashboard-pick-and-place-config.json
simulation/: Dropper Bottle 20ml-125 - Part 1.usd  dimensions.py  harmony.usd  harmony_no_older.usd  harmony_with_filling_station.usd  harmony_xarm_scene.usd
simulation/CameraStand_1300/: Camera Stand_1300.STEP  Camera Stand_1300.usd
simulation/Semi Automatic Powder Filling Machine/: Assem10.usd
simulation/Semi Automatic Volumetric Liquid/: precise air cylinder v1.step.SLDASM  precise air cylinder v1.step.usd
simulation/eye-dropper-bottle-1.snapshot.4/: Bottle.ipt  Bottle.usd  Bulb.ipt  Bulb.usd  Cap.ipt  Cap.usd  EyeDropperBottle.iam  EyeDropperBottle.ipj  EyeDropperBottle.stp  EyeDropperBottle.usd  Pipette.ipt
simulation/semi-automatic-paste-filling-machine-1.snapshot.1/: 1.sldasm  2.sldprt  3.sldprt  4.sldprt
simulation/volumetric-cup-filler-machine-2.snapshot (1).10/: NMRV0501342511100300T063-1(-----IC411NONO------STD).sldasm
src/: App.js  App.jsx  index.css  main.jsx
src/components/: Header.jsx  Sidebar.jsx
src/context/: DashboardContext.jsx
src/hooks/: index.js  useConfirm.js  useDragAndDrop.js  useLocalStorage.js  useWidgetData.js
src/pages/: DashboardPage.jsx  SettingsPage.jsx
src/services/: api.js
src/store/: index.js  pagesSlice.js  widgetDataSlice.js  widgetsSlice.js  widgetsThunks.js
src/utils/: constants.js  localStorage.js  widgetUtils.js
utils/: A4_calibration_sheet.docx  annotate_dataset.py  bottle_detector.ipynb  capture.py  dashboard-config-example.json  euler_to_quaternion.py  get_pose_size_of_objects_in_isaac.py  isaac_pose_to_ros2_pose.py  manual_detect.py  train_bottle_detector.py
utils/pick-station-cad/: 2_right_cover.stl
(+252 files in other folders)
